authority server supports HttpBasic, FormLogin, OAuth2 Client authentications

--- a/authserver/src/main/resources/templates/login.html
+++ b/authserver/src/main/resources/templates/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Social Sign In</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -37,7 +37,7 @@
         font-weight: bold;
     }
     .or-seperator {
-        margin: 20px 0 10px;
+        margin: 20px 0 0px;
         text-align: center;
         border-top: 1px solid #ccc;
     }
@@ -47,6 +47,10 @@
         position: relative;
         top: -11px;
         z-index: 1;
+    }
+    .login-status-message {
+        margin: 0px 0 10px;
+        text-align: center;
     }
     .social-btn .btn {
         margin: 10px 0;
@@ -63,10 +67,11 @@
         font-size: 18px;
     }
 </style>
+<title>Social Sign In</title>
 </head>
 <body>
 <div class="login-form">
-    <form action="/examples/actions/confirmation.php" method="post">
+    <form th:action="@{/login}" method="post">
         <h2 class="text-center">Sign in</h2>
         <div class="text-center social-btn">
             <a href="/oauth2/authorization/facebook" class="btn btn-primary btn-block"><i class="fa fa-facebook"></i> Sign in with <b>Facebook</b></a>
@@ -74,10 +79,12 @@
             <a href="/oauth2/authorization/google" class="btn btn-danger btn-block"><i class="fa fa-google"></i> Sign in with <b>Google</b></a>
         </div>
         <div class="or-seperator"><i>or</i></div>
+        <div class="login-status-message" th:if="${param.error}">Invalid email and password.</div>
+        <div class="login-status-message" th:if="${param.logout}">You have been logged out.</div>
         <div class="form-group">
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                <input type="text" class="form-control" name="username" placeholder="Username" required="required">
+                <input type="text" class="form-control" name="username" placeholder="Email" required="required">
             </div>
         </div>
         <div class="form-group">
@@ -85,15 +92,14 @@
                 <span class="input-group-addon"><i class="fa fa-lock"></i></span>
                 <input type="password" class="form-control" name="password" placeholder="Password" required="required">
             </div>
-        </div>        
+        </div>
         <div class="form-group">
             <button type="submit" class="btn btn-success btn-block login-btn">Sign in</button>
         </div>
         <div class="clearfix">
-            <label class="pull-left checkbox-inline"><input type="checkbox"> Remember me</label>
+            <label class="pull-left checkbox-inline"><input type="checkbox" name="remember-me"> Remember me</label>
             <a href="#" class="pull-right text-success">Forgot Password?</a>
-        </div>  
-        
+        </div>
     </form>
     <div class="hint-text small">Don't have an account? <a href="#" class="text-success">Register Now!</a></div>
 </div>
