add remember-me functionality and clean up

--- a/authserver/src/main/resources/templates/login.html
+++ b/authserver/src/main/resources/templates/login.html
@@ -79,12 +79,12 @@
             <a href="/oauth2/authorization/google" class="btn btn-danger btn-block"><i class="fa fa-google"></i> Sign in with <b>Google</b></a>
         </div>
         <div class="or-seperator"><i>or</i></div>
-        <div class="login-status-message" th:if="${param.error}">Invalid email and password.</div>
+        <div class="login-status-message" th:if="${param.error}">Invalid username and password.</div>
         <div class="login-status-message" th:if="${param.logout}">You have been logged out.</div>
         <div class="form-group">
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                <input type="text" class="form-control" name="username" placeholder="Email" required="required">
+                <input type="text" class="form-control" name="username" placeholder="Username" required="required">
             </div>
         </div>
         <div class="form-group">
