add OAuth2 Authorization code grant support

--- a/authserver/src/main/resources/templates/index.html
+++ b/authserver/src/main/resources/templates/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Welcome!</h1>
-        <p>Click <a th:href="@{/userInfo}">here</a> to see user's information.</p>
+        <p>Click <a th:href="@{./userInfo}">here</a> to see user's information.</p>
     </body>
 </html>
