--- a/authserver/src/main/resources/templates/userInfo.html
+++ b/authserver/src/main/resources/templates/userInfo.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
-        <form th:action="@{/logout}" method="post">
+        <form th:action="@{./logout}" method="post">
             <input type="submit" value="Sign Out"/>
         </form>
     </body>
