--- a/authserver/src/main/resources/templates/login.html
+++ b/authserver/src/main/resources/templates/login.html
@@ -55,8 +55,8 @@
     .social-btn .btn {
         margin: 10px 0;
         font-size: 15px;
-        text-align: left; 
-        line-height: 24px;       
+        text-align: left;
+        line-height: 24px;
     }
     .social-btn .btn i {
         float: left;
@@ -71,7 +71,7 @@
 </head>
 <body>
 <div class="login-form">
-    <form th:action="@{./login}" method="post">
+    <form th:action="@{/login}" method="post">
         <h2 class="text-center">Sign in</h2>
         <div class="text-center social-btn">
             <a href="./login/facebook" class="btn btn-primary btn-block"><i class="fa fa-facebook"></i> Sign in with <b>Facebook</b></a>
