--- a/frontend/src/app/content/content.component.html
+++ b/frontend/src/app/content/content.component.html
@@ -1,4 +1,37 @@
-<p>
-  content works!
-</p>
-<div id="summernote"></div>
+
+<div class="form-group">
+  <textarea id="title" class="form-control is-valid" rows="1" placeholder="Please type a title here."></textarea>
+</div>
+
+<div class="container">
+    <div class="table-responsive-sm">
+      <table class="table table-hover table-sm">
+        <thead>
+          <tr>
+            <th>Prepair</th>
+            <th>Cook</th>
+            <th>ReadyIn</th>
+            <th>Servings</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><input type="text" class="form-control-plaintext form-control-sm " placeholder="10m30s"></td>
+            <td><input type="text" class="form-control-plaintext form-control-sm " placeholder="1h"></td>
+            <td><input type="text" class="form-control-plaintext form-control-sm center" placeholder="1h10m30s"></td>
+            <td><input type="text" class="form-control-plaintext form-control-sm center" placeholder="1"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+<div class="form-group">
+  <label for="ingredients">Ingredients:</label>
+  <textarea id="ingredients" class="form-control" rows="3" placeholder="Please type ingredients in separated lines. For examples 6 ounces mozzarella cheese, shredded."></textarea>
+</div>
+
+<div class="form-group">
+  <label for="directions">Directions:</label>
+  <div id="directions" class="summernote directions"></div>
+</div>
