--- a/frontend/src/app/content/content.component.html
+++ b/frontend/src/app/content/content.component.html
@@ -16,10 +16,10 @@
         </thead>
         <tbody>
           <tr>
-            <td><input type="text" class="form-control-plaintext form-control-sm " placeholder="10m30s"></td>
-            <td><input type="text" class="form-control-plaintext form-control-sm " placeholder="1h"></td>
-            <td><input type="text" class="form-control-plaintext form-control-sm center" placeholder="1h10m30s"></td>
-            <td><input type="text" class="form-control-plaintext form-control-sm center" placeholder="1"></td>
+            <td><input type="text" class="input-table" placeholder="10m30s"></td>
+            <td><input type="text" class="input-table" placeholder="1h"></td>
+            <td><input type="text" class="input-table" placeholder="1h10m30s"></td>
+            <td><input type="text" class="input-table" placeholder="1"></td>
           </tr>
         </tbody>
       </table>
