--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -306,7 +306,7 @@
 
       <!-- Begin Page Content -->
       <div class="container-fluid">
-        <app-content></app-content>
+        <router-outlet></router-outlet>
       </div>
       <!-- /.container-fluid -->
 
