--- a/frontend/src/app/search-content/search-content.component.html
+++ b/frontend/src/app/search-content/search-content.component.html
@@ -1,3 +1,8 @@
-<p>
-  search-content works!
-</p>
+<div class="grid grid-pad">
+    <a *ngFor="let content of contents" class="col-1-4"
+        routerLink="/content/{{content.id}}">
+      <div class="module hero">
+        <h4>{{content.title}}</h4>
+      </div>
+    </a>
+  </div>
