content can be saved from UI to the backend

--- a/frontend/src/app/content/content.component.html
+++ b/frontend/src/app/content/content.component.html
@@ -29,5 +29,8 @@
   <label for="directions">Directions:</label>
   <div id="directions"></div>
 
+  <button type="button" (click)="onSave()" class="btn btn-outline-primary">
+    Save
+  </button>
   <app-messages></app-messages>
 </div>
