--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -227,7 +227,7 @@
               </h6>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="dropdown-list-image mr-3">
-                  <img class="rounded-circle" src="https://source.unsplash.com/fn_BT9fwg_E/60x60" alt="">
+                  <img class="rounded-circle" src="/assets/img/img60x60.jpg" alt="">
                   <div class="status-indicator bg-success"></div>
                 </div>
                 <div class="font-weight-bold">
@@ -237,7 +237,7 @@
               </a>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="dropdown-list-image mr-3">
-                  <img class="rounded-circle" src="https://source.unsplash.com/AU4VPcFN4LE/60x60" alt="">
+                  <img class="rounded-circle" src="/assets/img/img60x60.jpg" alt="">
                   <div class="status-indicator"></div>
                 </div>
                 <div>
@@ -247,7 +247,7 @@
               </a>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="dropdown-list-image mr-3">
-                  <img class="rounded-circle" src="https://source.unsplash.com/CS2uCrpNzJY/60x60" alt="">
+                  <img class="rounded-circle" src="/assets/img/img60x60.jpg" alt="">
                   <div class="status-indicator bg-warning"></div>
                 </div>
                 <div>
@@ -257,7 +257,7 @@
               </a>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="dropdown-list-image mr-3">
-                  <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60" alt="">
+                  <img class="rounded-circle" src="/assets/img/img60x60.jpg" alt="">
                   <div class="status-indicator bg-success"></div>
                 </div>
                 <div>
@@ -275,7 +275,7 @@
           <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="mr-2 d-none d-lg-inline text-gray-600 small">Valerie Luna</span>
-              <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+              <img class="img-profile rounded-circle" src="/assets/img/img60x60.jpg">
             </a>
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
