--- a/frontend/src/app/content/content.component.html
+++ b/frontend/src/app/content/content.component.html
@@ -32,5 +32,8 @@
   <button type="button" (click)="onSave()" class="btn btn-outline-primary">
     Save
   </button>
+  <button type="button" (click)="onDelete()" class="btn btn-outline-primary">
+    Delete
+  </button>
   <app-messages></app-messages>
 </div>
