working on Review functionality.

--- a/frontend/src/app/content/content.component.html
+++ b/frontend/src/app/content/content.component.html
@@ -35,5 +35,9 @@
   <button type="button" (click)="onDelete()" class="btn btn-outline-primary">
     Delete
   </button>
+
+  <app-review [review]="content.review"></app-review>
+
   <app-messages></app-messages>
+
 </div>
