frontend complies with backend modifications.

--- a/frontend/src/app/content/content.component.html
+++ b/frontend/src/app/content/content.component.html
@@ -36,7 +36,7 @@
     Delete
   </button>
 
-  <app-review [review]="content.review"></app-review>
+  <app-review [idCid]="content.idCid"></app-review>
 
   <app-messages></app-messages>
 
