working on rating function

--- a/frontend/src/app/content/content.component.html
+++ b/frontend/src/app/content/content.component.html
@@ -48,12 +48,24 @@
       </ngb-rating>
       <span>{{getRated()}}</span>
       <span>voted: {{content.reputation.reputed}}</span>
-      <span class="far fa-thumbs-up">{{content.reputation.liked}}</span>
-      <span class="far fa-thumbs-down">{{content.reputation.disliked}}</span>
+      <div class="btn-group btn-group-toggle" ngbRadioGroup name="radioBasic">
+        <label ngbButtonLabel class="btn-outline-dark">
+          <input ngbButton type="radio" (click)="onRepute(content, 'liked')" value="liked">
+          <i class="far fa-thumbs-up"></i>{{content.reputation.liked}}
+        </label>
+        <label ngbButtonLabel class="btn-outline-dark">
+          <input ngbButton type="radio" (click)="onRepute(content, 'disliked')" value="disliked">
+          <i class="far fa-thumbs-down"></i>{{content.reputation.disliked}}
+        </label>
+        <label ngbButtonLabel class="btn-outline-dark">
+          <input ngbButton type="radio" (click)="onRepute(content, 'reported')" value="reported">
+          <i class="fas fa-biohazard"></i>{{content.reputation.reported}}
+        </label>
+      </div>
     </div>
   </div>
 
-  <app-review [idCid]="content.idCid"></app-review>
+  <app-review [content]="content"></app-review>
 
   <app-messages></app-messages>
 
