--- a/frontend/src/app/search-content/search-content.component.html
+++ b/frontend/src/app/search-content/search-content.component.html
@@ -1,8 +1,19 @@
 <div class="grid grid-pad">
-    <a *ngFor="let content of contents" class="col-1-4"
-        routerLink="/content/{{content.idCid.identity}}/{{content.idCid.containerId}}">
-      <div class="module hero">
-        <h4>{{content.title}}</h4>
-      </div>
-    </a>
-  </div>
+  <p> popular contents </p>
+  <a *ngFor="let content of popularContents" class="col-1-4"
+      routerLink="/content/{{content.idCid.identity}}/{{content.idCid.containerId}}">
+    <div>
+      <h4>{{content.title}}</h4>
+    </div>
+  </a>
+
+  <p> latest contents </p>
+  <a *ngFor="let content of latestContents" class="col-1-4"
+    routerLink="/content/{{content.idCid.identity}}/{{content.idCid.containerId}}">
+    <div>
+      <h4>{{content.title}}</h4>
+    </div>
+  </a>
+
+  <button type="button" (click)="getNextPage()" class="btn btn-primary btn-lg btn-block" [disabled]="!nextInfo">More</button>
+</div>
