--- a/frontend/src/app/content/content.component.scss
+++ b/frontend/src/app/content/content.component.scss
@@ -1,4 +1,5 @@
 @import "node_modules/bootstrap/scss/bootstrap.scss";
+@import "src/styles.scss";
 
 .titleReadonly {
     @extend .form-control-plaintext;
