--- a/frontend/src/app/sidebar/sidebar.component.html
+++ b/frontend/src/app/sidebar/sidebar.component.html
@@ -6,12 +6,31 @@
   </div>
   -->
 
-  <a href="/" class="btn btn-primary btn-block">Home</a>
+  <a routerLink="/" class="sidebar-link">
+      <span class="fas fa-home"></span>
+      <span>Home</span>
+  </a>
 
-  <h3>Contents</h3>
   <div class="btn-group-vertical btn-block">
-    <a href="/" class="btn btn-primary">Popular</a>
-    <a href="/" class="btn btn-primary">Latest</a>
+    <a routerLink="/" class="sidebar-link">
+      <span class="far fa-thumbs-up"></span>
+      <span>Popular</span>
+    </a>
+
+    <a routerLink="/" class="sidebar-link">
+      <span class="far fa-clock"></span>
+      <span>Latest</span>
+    </a>
+
+    <div class="btn-group" role="group">
+        <button id="btnGroupDrop1" type="button" class="sidebar-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </button>
+        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+          <a class="dropdown-item sidebar-link" href="#">Dropdown link</a>
+          <a class="dropdown-item sidebar-link" href="#">Dropdown link</a>
+        </div>
+      </div>
   </div>
 
 </nav>
