refactored search component

--- a/frontend/src/app/sidebar/sidebar.component.html
+++ b/frontend/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <nav id="sidebar">
 
-  <!-- we can dismiss by click any points except sidebar menu
+  <!-- we can dismiss by click any points outside sidebar menu
   <div id="dismiss">
       <i class="fas fa-arrow-left"></i>
   </div>
