--- a/frontend/src/app/sidebar/sidebar.component.scss
+++ b/frontend/src/app/sidebar/sidebar.component.scss
@@ -43,7 +43,7 @@
 
 .sidebar-link {
   @extend .btn;
-  @extend .btn-outline-secondary;
+  @extend .btn-outline-dark;
   @extend .btn-block;
   @extend .my-1;
   text-align: left;
