add reputation component

--- a/frontend/src/app/content/content.component.html
+++ b/frontend/src/app/content/content.component.html
@@ -3,24 +3,24 @@
       placeholder="Please type a title here."></textarea>
 
   <div class="container">
-      <div class="table-responsive-sm">
-        <table class="table table-hover table-sm">
-          <thead>
-            <tr> <th>Prepair</th> <th>Cook</th> <th>Servings</th> </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><input type="text" [(ngModel)]="content.extend.prepTime"
-                  [ngClass]="'inputTable'+ styleSuffix()" placeholder="10m30s"></td>
-              <td><input type="text" [(ngModel)]="content.extend.cookTime"
-                  [ngClass]="'inputTable'+ styleSuffix()" placeholder="1h"></td>
-              <td><input type="text" [(ngModel)]="content.extend.servings"
-                  [ngClass]="'inputTable'+ styleSuffix()" placeholder="1"></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+    <div class="table-responsive-sm">
+      <table class="table table-hover table-sm">
+        <thead>
+          <tr> <th>Prepair</th> <th>Cook</th> <th>Servings</th> </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><input type="text" [(ngModel)]="content.extend.prepTime"
+                [ngClass]="'inputTable'+ styleSuffix()" placeholder="10m30s"></td>
+            <td><input type="text" [(ngModel)]="content.extend.cookTime"
+                [ngClass]="'inputTable'+ styleSuffix()" placeholder="1h"></td>
+            <td><input type="text" [(ngModel)]="content.extend.servings"
+                [ngClass]="'inputTable'+ styleSuffix()" placeholder="1"></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
+  </div>
 
   <label for="ingredients">Ingredients:</label>
   <textarea id="ingredients" [(ngModel)]="flatIngredients" [ngClass]="'ingredients'+ styleSuffix()"
@@ -36,34 +36,7 @@
     Delete
   </button>
 
-  <div class="container-fluid p-1">
-    <div class="align-middle">
-      <span>Average</span>
-      <ngb-rating [rate]="getRated()" [readonly]="true">
-        <ng-template let-fill="fill">
-          <span class="rating-star" [class.rating-star-full]="fill === 100">
-            <span class="rating-star-half" [style.width.%]="fill">&#9733;</span>&#9733;
-          </span>
-        </ng-template>
-      </ngb-rating>
-      <span>{{getRated()}}</span>
-      <span>voted: {{content.reputation.reputed}}</span>
-      <div class="btn-group btn-group-toggle" ngbRadioGroup name="radioBasic">
-        <label ngbButtonLabel class="btn-rating-number">
-          <input ngbButton type="radio" (click)="onRepute(content, 'liked')" value="liked">
-          <i class="far fa-thumbs-up"></i>{{content.reputation.liked}}
-        </label>
-        <label ngbButtonLabel class="btn-rating-number">
-          <input ngbButton type="radio" (click)="onRepute(content, 'disliked')" value="disliked">
-          <i class="far fa-thumbs-down"></i>{{content.reputation.disliked}}
-        </label>
-        <label ngbButtonLabel class="btn-rating-number">
-          <input ngbButton type="radio" (click)="onRepute(content, 'reported')" value="reported">
-          <i class="fas fa-biohazard"></i>{{content.reputation.reported}}
-        </label>
-      </div>
-    </div>
-  </div>
+  <app-reputation [model]="model" [idCid]="idCid" [reputation]="content.reputation"></app-reputation>
 
   <app-review [content]="content"></app-review>
 
