--- a/frontend/src/app/search-content/search-content.component.html
+++ b/frontend/src/app/search-content/search-content.component.html
@@ -1,9 +1,14 @@
-<div class="grid grid-pad">
-  <a *ngFor="let content of contents" class="col-1-4"
+<div class="row">
+  <a *ngFor="let content of contents" class="col-sm-3"
       routerLink="/content/{{content.idCid.identity}}/{{content.idCid.containerId}}">
     <div>
-      <h4>{{content.title}}</h4>
+      <div class="card">
+        <img class="card-img-top" [src]="imgServerUrl + content.fileRefs[0].uri" alt="Card image cap">
+        <div class="card-body">
+          <span class="card-text">{{content.title}}</span>
+        </div>
+      </div>
     </div>
   </a>
-  <button type="button" (click)="getNext()" class="btn btn-primary btn-lg btn-block" [disabled]="!nextInfo">More</button>
 </div>
+<button type="button" (click)="getNext()" class="btn btn-primary btn-lg btn-block" [disabled]="!nextInfo">More</button>
