--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -1,3 +1,90 @@
-<p>
-  profile works!
-</p>
+<div *ngIf="user" class="container">
+
+  <ngb-tabset justify="justified">
+    <ngb-tab title="Basic">
+      <ng-template ngbTabContent>
+        <div class="text-center m-1">
+          <img src="{{userImage}}" class="img-thumbnail" onError="this.src='/assets/img/emptyAvatar.png';">
+        </div>
+
+        <div *ngIf="isReadonly==false" class="row">
+          <div class="inputGroup col-8">
+            <div class="custom-file">
+              <input type="file" class="custom-file-input" (change)="onUploadPhoto($event.target.files)">
+              <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+            </div>
+          </div>
+          <div class="float-right">
+            <button type="button" (click)="onDeletePhoto()" class="inputGroup btn btn-outline-secondary">
+              Delete
+            </button>
+          </div>
+        </div>
+
+        <div class="inputGroup">
+          <div class="inputPrepend">
+            <span class="inputPrependLabel">Username</span>
+          </div>
+          <input class="inputBoxReadonly" type="text" [(ngModel)]="user.username">
+        </div>
+
+        <div class="inputGroup">
+          <div class="inputPrepend">
+            <span class="inputPrependLabel">Display Name</span>
+          </div>
+          <input [ngClass]="'inputBox'+ suffixReadonly()" type="text" [(ngModel)]="user.displayName">
+        </div>
+
+        <div class="inputGroup">
+          <div class="inputPrepend">
+            <span class="inputPrependLabel">Firstname</span>
+          </div>
+          <input [ngClass]="'inputBox'+ suffixReadonly()" type="text" [(ngModel)]="user.firstname">
+        </div>
+
+        <div class="inputGroup">
+          <div class="inputPrepend">
+            <span class="inputPrependLabel">Lastname</span>
+          </div>
+          <input [ngClass]="'inputBox'+ suffixReadonly()" type="text" [(ngModel)]="user.lastname">
+        </div>
+
+        <div class="inputGroup">
+          <div class="inputPrepend">
+            <span class="inputPrependLabel">Email</span>
+          </div>
+          <input [ngClass]="'inputBox'+ suffixReadonly()" type="text" [(ngModel)]="user.email">
+        </div>
+
+        <div class="inputGroup">
+          <div class="inputPrepend">
+            <label class="inputPrependLabel" for="genderSelector">Gender</label>
+          </div>
+          <select [ngClass]="'select'+ suffixReadonly()" id="genderSelector" [(ngModel)]="user.gender">
+            <option selected>{{getGender()}}</option>
+            <option value="M">Male</option>
+            <option value="F">Female</option>
+            <option value="U">Undefined</option>
+          </select>
+        </div>
+        <!-- TODO change password-->
+
+        <div *ngIf="isReadonly==false" class="float-right">
+          <button type="button" (click)="onSave()" class="btn btn-outline-secondary">
+            Save
+          </button>
+        </div>
+
+      </ng-template>
+    </ngb-tab> <!--  title="Basic" -->
+
+    <ngb-tab>
+      <ng-template ngbTabTitle><b>Interest</b> items</ng-template>
+      <ng-template ngbTabContent>
+
+      </ng-template>
+    </ngb-tab>
+
+  </ngb-tabset>
+
+</div><!-- *ngIf="user" class="container" -->
